--- a/the-toolkit.html
+++ b/the-toolkit.html
@@ -1100,19 +1100,8 @@
   <section class="hero" aria-label="Hero">
     <div class="hero-content">
       <h1 class="hero-headline" aria-label="Find the right response with our tools">
-        <span class="hero-line top">Find the right response</span>
+        <span class="hero-line top">From Insight to Impact:<br>Your Complete Toolkit</span>
         <span class="hero-line bottom">
-          <span class="with-our">with our</span>
-
-          <span class="flashing-words" aria-label="Rotating tool names">
-            <span class="flashing-word">Toolkit</span>
-            <span class="flashing-word">Lens</span>
-            <span class="flashing-word">Coach</span>
-            <span class="flashing-word">Scripts</span>
-            <span class="flashing-word">Templates</span>
-            <span class="flashing-word">Playbooks</span>
-            <span class="flashing-word">Planners</span>
-          </span>
         </span>
       </h1>
 
