--- a/the-lens.html
+++ b/the-lens.html
@@ -1114,8 +1114,8 @@
       z-index: 2;
     }
     .challenges-title {
-      font-size: 30px;
-      font-weight: 700;
+      font-size: 25px;
+      font-weight: 600;
       color: var(--text-dark);
       letter-spacing: -0.4px;
       margin-top: 10px;
@@ -2336,7 +2336,7 @@
           <div class="challenges-shell">
             <div class="challenges-top">
               <div style="flex: 2; min-width: 280px;">
-                <h2 class="challenges-title">What other employees are experiencing and how The Employee Playbook became their trusted support.</h2>
+                <h2 class="challenges-title">Real Employee Experiences and How The Employee Playbook Became Their Trusted Support.</h2>
                 <p class="challenges-intro">
                 </p>
               </div>
