--- a/the-lens.html
+++ b/the-lens.html
@@ -2284,7 +2284,7 @@
             <div class="lens-explainer-card">
               <h3><i class="fas fa-bullseye" aria-hidden="true"></i> What The Lens does</h3>
               <ul class="lens-explainer-bullets">
-                <li><i class="fas fa-check" aria-hidden="true"></i> Stops guessing: what’s noise vs real risk.</li>
+                <li><i class="fas fa-check" aria-hidden="true"></i> Zoom in & Focus. Understand what is really going on.</li>
                 <li><i class="fas fa-check" aria-hidden="true"></i> Gives words + structure: what to say, what to document, what to avoid.</li>
                 <li><i class="fas fa-check" aria-hidden="true"></i> Directs you to the best-fit tools in The Toolkit so you can get clarity quickly.</li>
               </ul>
@@ -3281,3 +3281,4 @@
   </script>
 </body>
 </html>
+
