--- a/create-account.html
+++ b/create-account.html
@@ -645,7 +645,7 @@
           </div>
 
           <div class="pw-guidance" id="pwGuidance">
-            Minimum <strong>8</strong> characters. Maximum <strong>72</strong>.
+            Minimum <strong>8</strong> characters. 
           </div>
         </div>
 
@@ -1086,3 +1086,4 @@
   </script>
 </body>
 </html>
+
